WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174317
Captions and subtitles not showing up in picture-in-picture for MSE content
https://bugs.webkit.org/show_bug.cgi?id=174317
Summary
Captions and subtitles not showing up in picture-in-picture for MSE content
Jeremy Jones
Reported
2017-07-10 12:52:30 PDT
Captions and subtitles not showing up in picture-in-picture for MSE content
Attachments
Patch
(1.46 KB, patch)
2017-07-10 13:16 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-07-10 12:53:11 PDT
rdar://problem/33188591
Jeremy Jones
Comment 2
2017-07-10 12:54:25 PDT
This fixes a regression created by:
http://trac.webkit.org/changeset/218403
Jeremy Jones
Comment 3
2017-07-10 13:16:20 PDT
Created
attachment 315015
[details]
Patch
WebKit Commit Bot
Comment 4
2017-07-10 13:58:36 PDT
Comment on
attachment 315015
[details]
Patch Clearing flags on attachment: 315015 Committed
r219307
: <
http://trac.webkit.org/changeset/219307
>
WebKit Commit Bot
Comment 5
2017-07-10 13:58:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug