Captions and subtitles not showing up in picture-in-picture for MSE content https://bugs.webkit.org/show_bug.cgi?id=174317 rdar://problem/33188591

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-07-10
Reviewed by Eric Carlson.

Reverts a regression created by r218403.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateTextTrackRepresentation):

Canonical link: https://commits.webkit.org/191150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219307 268f45cc-cd09-0410-ab3c-d52691b4dbfc