Source/WebCore/html/shadow/MediaControlElements.cpp
@@ -1296,7 +1296,6 @@ void MediaControlTextTrackContainerElement::updateTextTrackRepresentation()
         mediaElement->setTextTrackRepresentation(m_textTrackRepresentation.get());
     }
 
-    hide();
     m_textTrackRepresentation->update();
     updateStyleForTextTrackRepresentation();
 }
